--- a/index.html
+++ b/index.html
@@ -5,61 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--header-->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-navigation">
+        <a href="./index.html" class="logo"
+          ><span class="accent">Web</span>Studio</a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="./index.html" class="header-link current">Studio</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="addres">
+        <ul class="addres-list list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="addres-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="addres-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
-     
     </header>
     <!--main-->
     <main>
       <!--hero-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
       <!--section1-->
-      <section>
-        <h2>Quality</h2>
-        <ul>
+      <section class="quality">
+        <h2 class="invsible-title">Quality</h2>
+        <ul class="quality-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="quality-title">Strategy</h3>
+            <p class="qualite-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="quality-title">Punctuality</h3>
+            <p class="qualite-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="quality-title">Diligence</h3>
+            <p class="qualite-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="quality-title">Technologies</h3>
+            <p class="qualite-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -68,45 +90,70 @@
       </section>
       <!--section2-->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li><img src="./images/img1.jpg" alt="screen computer" width="360"></li>
-          <li><img src="./images/img2.jpg" alt="mobile application" width="360"/></li>
-          <li><img src="./images/img3.jpg" alt="mobile phone and computer with same sites open" width="360"/></li>
+        <h2 class="invsible-title">What are we doing</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="screen computer"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="mobile application"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="mobile phone and computer with same sites open"
+              width="360"
+              height="300"
+            />
+          </li>
         </ul>
       </section>
       <!--section3-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/mark.jpg" alt="man with a beard" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/tom.jpg" alt="man" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-description">Frontend Developer</p>
+          </li class="team-item">
           <li>
             <img src="./images/gamila.jpg" alt="girl" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/daniel.jpg" alt="man" width="264" />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="team-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--footer-->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.</p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo logo"
+        ><span class="accent">Web</span>Studio</a
+      >
+      <p class="footer-description">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
