upgrade home work2

--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
       </section>
       <!--section1-->
       <section class="quality">
-        <h2 class="invsible-title">Quality</h2>
+        <h2 class="quality-title">Quality</h2>
         <ul class="quality-list list">
           <li>
-            <h3 class="quality-title">Strategy</h3>
+            <h3 class="quality-subtitle">Strategy</h3>
             <p class="qualite-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="quality-title">Punctuality</h3>
+            <h3 class="quality-subtitle">Punctuality</h3>
             <p class="qualite-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="quality-title">Diligence</h3>
+            <h3 class="quality-subtitle">Diligence</h3>
             <p class="qualite-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="quality-title">Technologies</h3>
+            <h3 class="quality-subtitle">Technologies</h3>
             <p class="qualite-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -89,8 +89,8 @@
         </ul>
       </section>
       <!--section2-->
-      <section>
-        <h2 class="invsible-title">What are we doing</h2>
+      <section class="works">
+        <h2 class="works-title">What are we doing</h2>
         <ul class="list">
           <li>
             <img
