--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <!-- main -->
     <main>
       <section class="projects">
-        <h1 class="invsible-title">Projects and works</h1>
+        <h1 class="projects-title">Projects and works</h1>
         <ul class="projects-list list">
           <li class="projects-item"><button class="button projects-btn">All</button></li>
           <li class="projects-item"></li><button class="button projects-btn">Web Site</button>
@@ -70,7 +70,7 @@
                 height="300"
               />
               <h2 class="works-title">Banking App Interface Concept</h2>
-              <App class="works-description">App</p>
+              <p class="works-description">App</p>
             </a>
           </li>
           <li class="works-item">
